<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Fixed Term</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Results</string>
    <string name="title_activity_third">Graphic</string>
    <string name="initial_amount_label">Initial Amount:</string>
    <string name="monthly_savings_label">Monthly Savings:</string>
    <string name="porcentage_of_interest_label">% of Monthly Interests:</string>
    <string name="number_of_months_label">Quantity of Months:</string>
    <string name="dollar_value_label">Quote of the Dolar:</string>
    <string name="initial_amount_alert">Enter an Initial Amount</string>
    <string name="monthly_savings_alert">Enter Monthly Savings</string>
    <string name="porcentage_of_interest_alert">Enter % of Interests</string>
    <string name="number_of_months_alert">Enter Quantity of Months</string>
    <string name="dollar_value_alert">Enter the Quote of the Dollar</string>
    <string name="initial_amount_parameter">INITIAL AMOUNT</string>
    <string name="monthly_savings_parameter">MONTHLY SAVINGS</string>
    <string name="porcentage_of_interest_parameter">% INTERESTS</string>
    <string name="number_of_months_parameter">QUANTITY OF MONTHS</string>
    <string name="dollar_value_parameter">QUOTE OF THE DOLLAR</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="monthly_savings">Monthly Savings</string>
    <string name="porcentage_of_interest">% Interests</string>
    <string name="number_of_months">Quantity of Months</string>
    <string name="dollar_value">Quote of the Dollar</string>
    <string name="month_table">Mon</string>
    <string name="increment_table">Incre($)</string>
    <string name="increment_dollars_table">Incre(U$)</string>
    <string name="balance_table">Balan($)</string>
    <string name="balance_dollars_table">Balan(U$)</string>
    <string name="button_label_calculate">Calculate</string>
    <string name="button_label_graphic">Graphic</string>
    <string name="button_label_clear">Clear</string>
    <string name="chart_title">Pesos Salt vs Dollar Salt</string>
    <string name="x_title">Months</string>
    <string name="y_title">Pesos/Dollars Salt</string>
    <string name="pesos_series">Pesos</string>
    <string name="dollars_series">Dollars</string>
</resources>
